Task/fp 276 css lint (#30)
Below are the relevant commits from a much larger set of squashed commits:

* FP-276: Basic CSS linting
* FP-276: Add more rules
* FP-276: Fix CSS lint errors
* FP-276: Extend standard `config`
* FP-276: Better comments for lint config
* FP-276: Update `package-lock.json`
* FP-276: Ignore `coverage` dir
* FP-276: Disable lint error to be solved by FP-130
* Quick: Remove unused `toggle-icon` (again?)
* Quick: Add comment to explain empty file
* FP-276: Fix lint issues for merged FP-130 code
* FP-276: Update `README.md`

--- a/client/src/components/Allocations/Allocations.scss
+++ b/client/src/components/Allocations/Allocations.scss
@@ -5,7 +5,7 @@
     button {
         border-radius: 0;
         border: 0;
-        font: Bold 12px Roboto;
+        font: bold 12px Roboto, sans-serif;
         background-color: #9D85EF;
         padding: 0.5rem 1rem;
     }
@@ -58,10 +58,9 @@
     }
 }
 #allocations-sidebar {
-    width: fit-content;
-    border-right: 1px solid rgba(112, 112, 112, .25);
-    font-family: Roboto;
     width: 215px;
+    border-right: 1px solid rgba(112, 112, 112, 0.25);
+    font-family: Roboto, sans-serif;
 
     /* !!!: This link is `40px`, which is taller than other sidebar links (which are ~`35px`) */
     .nav-link {
@@ -105,7 +104,7 @@
                 padding: 0;
                 vertical-align: text-top;
             }
-            border-bottom: 1px solid rgba(#707070,0.25);
+            border-bottom: 1px solid rgba(#707070, 0.25);
             margin-bottom: 24px;
         }
         thead {
@@ -119,11 +118,13 @@
             }
         }
         .sub-table-row {
+            /* FP-457: Will fix this *//* stylelint-disable no-descending-specificity */
             :nth-child(even) {
                 background-color: white;
             }
+            /* stylelint-enable no-descending-specificity */
             color: #707070;
-            font: 14px Roboto;
+            font: 14px Roboto, sans-serif;
         }
         .sub-table-cell {
             background-color: rgba(#c6c6c6, 0.1);
@@ -155,6 +156,7 @@
 .team-view-modal-wrapper {
     .table-hover {
         tbody {
+            /* FP-457: Will fix this *//* stylelint-disable no-descending-specificity */
             tr {
                 height: 35px;
                 cursor: pointer;
@@ -165,6 +167,7 @@
                     vertical-align: middle;
                 }
             }
+            /* stylelint-enable no-descending-specificity */
             tr:hover {
                 background-color: #dfdaf5;
             }
@@ -179,7 +182,7 @@
         overflow-y: scroll;
         padding-left: 0;
         padding-right: 0;
-        border-right: 1px solid rgba(112, 112, 112, .25);
+        border-right: 1px solid rgba(112, 112, 112, 0.25);
     }
     .modal-right {
         display: flex;
@@ -189,7 +192,7 @@
         .contact-card {
             display: flex;
             flex-direction: column;
-            font: 16px Roboto;
+            font: 16px Roboto, sans-serif;
             height: 100%;
             overflow: auto;
             div {
