--- a/client/src/components/Dashboard/Dashboard.scss
+++ b/client/src/components/Dashboard/Dashboard.scss
@@ -32,7 +32,8 @@
     margin-bottom: 38px;
 }
 
-.dashboard-header, .dashboard-item-header {
+.dashboard-header,
+.dashboard-item-header {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
@@ -64,6 +65,7 @@
     padding: 0;
 }
 
-.dashboard-items .ReactTable .rt-th, .dashboard-items .ReactTable .rt-td {
+.dashboard-items .ReactTable .rt-th,
+.dashboard-items .ReactTable .rt-td {
     color: #707070;
 }
