--- a/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
+++ b/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
@@ -4,7 +4,6 @@ $frontera-portal-color-primary: #9d85ef;
 .data-files-sidebar {
   width: 165px;
   background: #ffffff;
-  border-right: #dfdfdf;
   padding-top: 10px;
   border-right: 1px solid rgba(112, 112, 112, 0.25);
 }
@@ -53,7 +52,7 @@ $frontera-portal-color-primary: #9d85ef;
   width: 200px;
   vertical-align: top;
 }
-.dropdown-menu:before {
+.dropdown-menu::before {
   position: absolute;
   top: -10px;
   left: 65px;
@@ -62,7 +61,7 @@ $frontera-portal-color-primary: #9d85ef;
   border-left: 10px solid transparent;
   content: '';
 }
-.dropdown-menu:after {
+.dropdown-menu::after {
   position: absolute;
 	top: -9px;
 	left: 66px;
