--- a/client/src/components/Workbench/Workbench.scss
+++ b/client/src/components/Workbench/Workbench.scss
@@ -37,7 +37,8 @@
     align-items: center;
 }
 
-.workbench-content .btn-link, .workbench-content .wb-link {
+.workbench-content .btn-link,
+.workbench-content .wb-link {
   color: #9d85ef;
 }
 
@@ -67,7 +68,7 @@
   color: white;
 }
 
-.workbench-content .ReactTable .rt-thead.-header  {
+.workbench-content .ReactTable .rt-thead.-header {
   box-shadow: none;
   border-bottom: 1px solid #707070;
   font-weight: 500;
@@ -81,25 +82,29 @@
   border-bottom: 1px solid rgba(112, 112, 112, 0.25);
 }
 
-.workbench-content .ReactTable .rt-thead .rt-th.-sort-asc:after, .ReactTable .rt-thead .rt-td.-sort-asc:after {
+.workbench-content .ReactTable .rt-thead .rt-th.-sort-asc::after,
+.ReactTable .rt-thead .rt-td.-sort-asc::after {
   margin-left: 5px;
-  font-family: "Font Awesome 5 Free";
+  font-family: "Font Awesome 5 Free"; /* stylelint-disable-line font-family-no-missing-generic-family-keyword */
   content: "\f0dd";
   display: inline-block;
   vertical-align: middle;
   font-weight: 900;
 }
 
-.workbench-content .ReactTable .rt-thead .rt-th.-sort-desc, .workbench-content .ReactTable .rt-thead .rt-td.-sort-desc,
-.workbench-content .ReactTable .rt-thead .rt-th.-sort-asc, .workbench-content .ReactTable .rt-thead .rt-td.-sort-asc {
+.workbench-content .ReactTable .rt-thead .rt-th.-sort-desc,
+.workbench-content .ReactTable .rt-thead .rt-td.-sort-desc,
+.workbench-content .ReactTable .rt-thead .rt-th.-sort-asc,
+.workbench-content .ReactTable .rt-thead .rt-td.-sort-asc {
   box-shadow: none;
   display: flex;
   color: #484848;
 }
 
-.workbench-content .ReactTable .rt-thead .rt-th.-sort-desc:after, .ReactTable .rt-thead .rt-td.-sort-desc:after {
+.workbench-content .ReactTable .rt-thead .rt-th.-sort-desc::after,
+.ReactTable .rt-thead .rt-td.-sort-desc::after {
   margin-left: 5px;
-  font-family: "Font Awesome 5 Free";
+  font-family: "Font Awesome 5 Free"; /* stylelint-disable-line font-family-no-missing-generic-family-keyword */
   content: "\f0de";
   display: inline-block;
   vertical-align: middle;
@@ -110,7 +115,8 @@
   border-bottom: 1px solid #707070;
 }
 
-.workbench-content .ReactTable .rt-thead .rt-th, .ReactTable .rt-thead .rt-td {
+.workbench-content .ReactTable .rt-thead .rt-th,
+.ReactTable .rt-thead .rt-td {
   border-right: none;
 }
 
