--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@
 
 body {
   margin: 0;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -20,8 +20,7 @@ body {
 */
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 /*
