--- a/client/src/components/History/History.module.scss
+++ b/client/src/components/History/History.module.scss
@@ -78,10 +78,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: .9em;
+    font-size: 0.9em;
     border-radius: 30%;
     background-color: #9d85ef;
-    color: #fff;
+    color: rgb(253, 241, 241);
     margin-left: auto;
     margin-right: 2em;
 }
