Modals in separate directory

--- a/client/src/components/Allocations/Allocations.scss
+++ b/client/src/components/Allocations/Allocations.scss
@@ -200,6 +200,9 @@
                 text-overflow: ellipsis;
                 overflow: auto;
             }
+            .contact-card-title {
+                font-weight: bold;
+            }
         }
     }
     .user-name {
