--- a/server/portal/templates/includes/nav_cms.html
+++ b/server/portal/templates/includes/nav_cms.html
@@ -1,10 +1,11 @@
 {# @var className #}
 
+
 {# WARNING: Some markup is duplicated in other repositories #}
 {# SEE: https://confluence.tacc.utexas.edu/x/LoCnCQ #}
 <ul class="s-cms-nav  {{ className }}" id="cms-nav-pages" data-cms-nav-endpoint="/cms/nav/pages/markup/">
-    {# All top-level CMS controlled nav elements handled here. #}
-    {# Content populated via JavaScript, below #}
+  <!-- All top-level CMS controlled nav elements handled here. -->
+  {# FAQ: Content populated via JavaScript, below #}
 </ul>
 {# RFE: Use `insertAdjacentHTML` (not `innerHTML`) to replace placeholder markup with desired markup #}
 <script>
