--- a/server/portal/templates/includes/cms_menu.html
+++ b/server/portal/templates/includes/cms_menu.html
@@ -1,5 +1,5 @@
 {% load i18n menu_tags cache %}
-
+{# FAQ: This would be called by `nav_cms.html`, but instead that file loads the CMS markup via AJAX #}
 {% for child in children %}
 <li class="nav-item {% if child.ancestor or child.selected or request.get_full_path == child.url %}active{% endif %} {% if child.children %}dropdown{% endif %} {{child.attr.class}}">
   {% if child.children %}
