--- a/client/src/components/Jobs/Jobs.scss
+++ b/client/src/components/Jobs/Jobs.scss
@@ -16,6 +16,27 @@
   td:nth-child(5) { min-width: 6em; }
 }
 
+.jobs-detailed-view {
+  /* icon */
+  th:nth-child(1),
+  td:nth-child(1) { min-width: 2em; }
+  /* name */
+  th:nth-child(2),
+  td:nth-child(2) { width: 50%; }
+  /* details */
+  th:nth-child(3),
+  td:nth-child(3) { min-width: 7em; }
+  /* path */
+  th:nth-child(4),
+  td:nth-child(4) { width: 50%; }
+  /* date */
+  th:nth-child(5),
+  td:nth-child(5) { min-width: 10em; }
+  /* status */
+  th:nth-child(6),
+  td:nth-child(6) { min-width: 6em; }
+}
+
 .job__path {
   direction: rtl; /* move overflow/ellipsis to left of text */
 }
