--- a/client/src/components/History/History.scss
+++ b/client/src/components/History/History.scss
@@ -1,4 +1,4 @@
-/* this is an attempt to follow AppBrowser.scss including FP-389 while checking Allocations.scss*/
+/* this is an attempt to follow AppBrowser.scss including FP-389 while checking Allocations.scss */
 
 
 .history-wrapper {
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
 
-  padding: 20px 40px 0px 20px;
+  padding: 20px 40px 0 20px;
   border-bottom: 1px solid #707070;
 }
 
@@ -21,7 +21,7 @@
   padding-top: 10px;
   padding-bottom: 10px;
 
-  border-right: 1px solid rgba(112, 112, 112, .25);
+  border-right: 1px solid rgba(112, 112, 112, 0.25);
 }
 
 .history-sidebar .nav-item {
@@ -65,7 +65,7 @@
 
 .history-sidebar .nav-text {
   padding-left: 15px;
-  font-size: .78em;
+  font-size: 0.78em;
   font-weight: 500;
 }
 
@@ -94,7 +94,7 @@
 }
 
 .history-header__button {
-  font-size: .78em;
+  font-size: 0.78em;
 }
 
 .history-container {
@@ -109,5 +109,5 @@
   padding-left: 1em;
   width: 100%;
   height: 100%;
-  font-size: .78em;
+  font-size: 0.78em;
 }
