--- a/client/src/components/History/HistoryBadge/HistoryBadge.module.scss
+++ b/client/src/components/History/HistoryBadge/HistoryBadge.module.scss
@@ -1,11 +1,9 @@
 .root {
-    height: 1.1em;
-    width: 1.3em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 0.9em;
-    border-radius: 30%;
+    padding: 0 0.3em; /* buffer retained on 2+ digit badge, without increase on 1 digit badge */
+    min-width: 1.3em;  /* ~18px design * 1.2 design-to-app ratio (rounded) */
+    text-align: center;
+    font-size: 0.75em;  /* ~10px design * 1.2 design-to-app ratio */
+    border-radius: 3.6px;
     background-color: #9d85ef;
     color: rgb(253, 241, 241);
     margin-left: auto;
