Add padding to error messages

--- a/client/src/components/Applications/AppForm/AppForm.scss
+++ b/client/src/components/Applications/AppForm/AppForm.scss
@@ -77,4 +77,5 @@
                      so that `appBrowser-wrapper` height does not change based on sibling content */
     align-items: center;
     color: #9d85ef;
+    padding: 30px;
 }
