--- a/client/src/styles/trumps/icon.css
+++ b/client/src/styles/trumps/icon.css
@@ -20,6 +20,9 @@
   display: inline-flex; /* `flex` to align `::before`; `inline` to not trigger new line */
                         /* a modern slimmer alternative to `&::before { display: block; }` */
 }
+/* Hide accessibile text of non-empty `.icon`'s */
+.icon         { visibility: hidden; }
+.icon::before { visibility: visible; }
 
 /* FP-455: Try to use selector `.icon, [class*="icon-"]` and update app accordingly */
 [class^="icon-"]::before,
