--- a/client/src/styles/settings/color.css
+++ b/client/src/styles/settings/color.css
@@ -18,6 +18,6 @@
         --global-color-accent--light: #9D85EF40; /* Not used, yet. *//* `normal` @ 25% opacity */
     --global-color-success--normal: #43D130;
         --global-color-success--alt: #C7CE1D;
-    --global-color-warning--normal: #C7CE1D;
+    --global-color-warning--normal: #9D85EF;
     --global-color-danger--normal: #EB6E6E;
 }
