FP-515: Disable an "extra icon"

--- a/client/src/styles/trumps/icon.css
+++ b/client/src/styles/trumps/icon.css
@@ -14,3 +14,8 @@
 /* .icon-contract */.icon-collapse::before {
   content: "\e915";
 }
+
+/* Disabled */
+/* Icon name is retained, but icon is not desired */.icon-jobs-history::before {
+  content: "";
+}
