--- a/client/src/components/_common/Form/FileInputDropZone.scss
+++ b/client/src/components/_common/Form/FileInputDropZone.scss
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
 
-    .icon-action-upload {
+    .icon-upload {
         color: #70707026;
         display: flex;
         font-size: 12rem;
