FP-228: Hide accessible Icon text

--- a/client/src/styles/trumps/icon.css
+++ b/client/src/styles/trumps/icon.css
@@ -9,6 +9,9 @@
   display: inline-flex; /* `flex` to align `::before`; `inline` to not trigger new line */
                         /* a modern slimmer alternative to `&::before { display: block; }` */
 }
+/* Hide accessibile text of non-empty `.icon`'s */
+.icon         { visibility: hidden; }
+.icon::before { visibility: visible; }
 
 /* Aliases */
 /* .icon-contract */.icon-collapse::before {
