--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -24,3 +24,4 @@
 /* TRUMPS */
 /* NOTE: For the most part, allow React components to explicitely import as needed */
 @import url('./trumps/icon.css');
+@import url('./trumps/bootstrap.css');
