Task/fp 354 message component (#88)
* WIP: FP-354: Add component, icon sub-comp, tests

To Do:
- Run tests
- Fix lint errors
- Create tests for icon sub-component
- Graduate icon sub-component to component

* FP-354: Fix test

* FP-354: Fix ES Lint error. Remove test CSS.

* FP-354: Test sub-component

* FP-354: Graduate MessageIcon to Icon

* FP-354: Support `AppIcon` use of `Icon`

* FP-354: Revert test tweaks to jest.config.js roots

* FP-354: Support shortcut path to load new commons

* FP-354: Accessible icon text. Missing icon class.

* FP-354: Message text and icon text as `children`

* FP-354: Styles for Message's

* FP-354: Use `Message` in `DataFilesTable.js`

* Quick: CSS lint allow align single-line rulesets

* FP-354: Add missing `success` type

* FP-354: Success type and fixes

* FP-354: Fixes. Require icon. Color info type.

* FP-534: Comments. Color var naming tweak.

* FP-354: Fix AppIcon test fail (missing icon class)

* FP-354: Expand tests. Simplify class match syntax.

* Noop: Remove style remark from function comment

* FP-354: CHoose different icon for `info` type

--- a/client/src/styles/settings/color.css
+++ b/client/src/styles/settings/color.css
@@ -17,6 +17,7 @@
     --global-color-accent--normal: #9D85EF;
         --global-color-accent--light: #9D85EF40; /* Not used, yet. *//* `normal` @ 25% opacity */
     --global-color-success--normal: #43D130;
-    --global-color-warning--normal: #C7CE1D;
+        --global-color-success--alt: #C7CE1D;
+    --global-color-warning--normal: #9D85EF;
     --global-color-danger--normal: #EB6E6E;
 }
