--- a/client/src/components/Tickets/TicketsLayout.scss
+++ b/client/src/components/Tickets/TicketsLayout.scss
@@ -1,12 +1,24 @@
 .ticket-reply-required {
-  .rt-td,
-  .btn-link {
-    font-weight: 500;
-  }
+  font-weight: 500;
 }
 
 .ticket-unknown-status {
   font-family: monospace;
+}
+
+.tickets-view {
+  /* Ticket Number */
+  th:nth-child(1),
+  td:nth-child(1) { min-width: 5em; }
+  /* Subject */
+  th:nth-child(2),
+  td:nth-child(2) { width: 80%; }
+  /* Date */
+  th:nth-child(3),
+  td:nth-child(3) { width: 20%; }
+  /* Status */
+  th:nth-child(4),
+  td:nth-child(4) { min-width: 10em; }
 }
 
 .ticket__error {
@@ -16,4 +28,3 @@
   color: #9d85ef;
   padding: 30px;
 }
-
