FP-317: CSS Followup

--- a/client/src/components/History/History.scss
+++ b/client/src/components/History/History.scss
@@ -1,5 +1,5 @@
-/* this is an attempt to follow AppBrowser.scss including FP-389 while checking Allocations.scss */
-
+/* This is an attempt to follow AppBrowser.scss including FP-389 while checking Allocations.scss */
+/* Styles that are ineffectual or from (and specific to) AppBrowser.scss have been removed */
 
 .history-wrapper {
   /* As a flex item */
@@ -17,6 +17,7 @@
   /* FP-404: All Portal section sidebars should use this value. */
   --min-width: 200px;
 
+  min-width: var(--min-width);
   margin-left: -20px;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -24,36 +25,13 @@
   border-right: 1px solid rgba(112, 112, 112, 0.25);
 }
 
-.history-sidebar .nav-item {
-  /* Define minimum width of list and minimum width of columns in list */
-  /* NOTE: Wes B. does not know how to do this using CSS Grid. Help is welcome. */
-  min-width: var(--min-width);
-}
-
 .history-sidebar .nav-link {
-  padding: 5px 25px 5px 20px; /* overwrite Bootstrap, match UI design */
-
   color: #707070;
-  border-radius: 0;
-  cursor: pointer; /* RFE: Add `href` on links to both avoid needing this style and provide URL to app state */
-  border: none;
-
-  white-space: nowrap;
 }
 
-.history-sidebar .nav-link.active {
-  background: #dfdaf5;
-  border: none;
-}
-
-.history-sidebar .nav-link.hover {
-  background: #d9d1ff;
-  border: none;
-}
-
+.history-sidebar .nav-link.active,
 .history-sidebar .nav-link:hover {
   background: #d9d1ff;
-  border: none;
 }
 
 .history-sidebar .nav-content {
@@ -67,13 +45,6 @@
   padding-left: 15px;
   font-size: 0.78em;
   font-weight: 500;
-}
-
-
-/* Copy from Sidebar.scss */
-.history-sidebar__icon-nav {
-  font-size: 1.5em;
-  height: 1em;
 }
 
 .history-header {
