--- a/client/src/components/History/History.scss
+++ b/client/src/components/History/History.scss
@@ -26,19 +26,14 @@
 }
 
 .history-sidebar .nav-link {
+  padding-left: 1.25em; /* ~20px design * 1.2 design-to-app ratio (rounded) */
+
   color: #707070;
 }
 
 .history-sidebar .nav-link.active,
 .history-sidebar .nav-link:hover {
   background: #d9d1ff;
-}
-
-.history-sidebar .nav-content {
-  padding-left: 10px;
-
-  display: flex;
-  align-items: center;
 }
 
 .history-sidebar .nav-text {
@@ -53,6 +48,8 @@
   justify-content: space-between;
   width: 100%;
   border-bottom: 1px solid #707070;
+  /* FAQ: Design is inconsistent, but most of the time uses `10.5px` */
+  padding-bottom: 0.75rem; /* ~10px * design * 1.2 design-to-app ratio */
 }
 
 .history-header__text {
@@ -76,7 +73,8 @@
 }
 
 .history-content {
-  padding-top: 10px;
+  /* FAQ: Design is inconsistent, but averages about `10.5px` */
+  padding-top: 0.75rem; /* ~10px * design * 1.2 design-to-app ratio */
   padding-left: 1em;
   width: 100%;
   height: 100%;
