FP-317: Use correct active link background color

--- a/client/src/components/History/History.scss
+++ b/client/src/components/History/History.scss
@@ -33,7 +33,7 @@
 
 .history-sidebar .nav-link.active,
 .history-sidebar .nav-link:hover {
-  background: #d9d1ff;
+  background: var(--global-color-accent--light);
 }
 
 .history-sidebar .nav-text {
