FP-317: Use px when not matching design ratio

--- a/client/src/components/History/History.scss
+++ b/client/src/components/History/History.scss
@@ -26,7 +26,7 @@
 }
 
 .history-sidebar .nav-link {
-  padding-left: 1.25em; /* ~20px design * 1.2 design-to-app ratio (rounded) */
+  padding-left: 20px;
 
   color: #707070;
 }
