--- a/client/src/components/_common/Message/Message.module.scss
+++ b/client/src/components/_common/Message/Message.module.scss
@@ -1,3 +1,7 @@
+/* WARNING: No official design */
+/* FAQ: Styles are a mix of static design and dev design */
+/* SEE: https://confluence.tacc.utexas.edu/x/gYCeBw */
+
 .container {
   /* Vertically center child elements */
   display: inline-flex;
@@ -15,7 +19,7 @@
 
 /* Types */
 .is-info {
-  color: var(--global-color-primary--x-dark); /* WARNING: No official design */
+  color: var(--global-color-primary--x-dark);
 }
 .is-warn {
   color: var(--global-color-warning--normal);
@@ -31,5 +35,24 @@
     margin-right: 1rem;
 
     color: var(--global-color-success--alt);
+  }
+}
+
+/* WARNING: Accessibility solution originating from of lack of design */
+/* FAQ: Can not explicitely declare `.wb-link`, because its a global class */
+/* Avoid clash of red text and purple `.wb-link` */
+.is-error {
+  & a {
+    color: var(--global-color-danger--normal) !important /* override overly-specific `.workbench-content .wb-link` */;
+  }
+}
+/* Distinguish text and `.wb-link`, and link states default and hover */
+.is-warn,
+.is-error {
+  & a {
+    text-decoration-line: underline;
+  }
+  & a:hover {
+    text-decoration-style: double;
   }
 }
