--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -11,6 +11,7 @@
 
 /* GENERIC */
 @import url('./generics/roots.css');
+@import url('./generics/text-semantics.css');
 
 /* ELEMENTS */
 @import url('./elements/inline-text.css');
