Fp 470/infinite scroll table css (#67)
* FP-470: Prepare InfiniteScrollTable CSS to be a module

* FP-470: Load InfiniteScrollTable as Module

* FP-470: Let o-fixed-header-table be global

* FP-470: Remove bottom border from non-data rows

* FP-470: Simpler, atomic styles. Use ellipsis mixin

* FP-470: Remove changes used to test UI

* FP-470: Use variables. Improve comments. Clean.

* Quick: Ignore function space lint (read more…)

The `function-parentheses-space-inside` configuration is too limited.

Nested functions in CSS are common. New vars are not always the answer.

My CSS function spacing has been complemented by industry peers.

Legibility trumps consistency when complex code is required.

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -7,6 +7,7 @@
 @import url('./settings/border.css');
 
 /* TOOLS */
+/* NOTE: For the most part, allow React components to explicitely import as needed */
 /* … */
 
 /* GENERIC */
@@ -14,9 +15,11 @@
 
 /* ELEMENTS */
 @import url('./elements/inline-text.css');
+@import url('./elements/table.css');
 
 /* OBJECTS */
 /* NOTE: For the most part, allow React components to explicitely import as needed */
+@import url('./objects/o-fixed-header-table.css');
 
 /* COMPONENTS */
 /* NOTE: For the most part, allow React components to explicitely import as needed */
