--- a/client/src/components/Applications/AppBrowser/AppBrowser.scss
+++ b/client/src/components/Applications/AppBrowser/AppBrowser.scss
@@ -9,6 +9,9 @@
   align-items: stretch;
 
   border-bottom: 1px solid #707070;
+
+  /* FP-404: All Portal section sidebars should use this value. */
+  --min-width: 200px;
 }
 #appBrowser-sidebar,
 #appBrowser-tray .apps-grid-list {
@@ -27,15 +30,12 @@
 }
 
 #appBrowser-sidebar {
-    /* FP-404: All Portal section sidebars should use this value. */
-    --min-width: 200px;
-
     margin-left: -20px;
 }
 #appBrowser-sidebar .nav-item {
-    /* Define minimum width of list and minimum width of columns in list */
-    /* NOTE: Wes B. does not know how to do this using CSS Grid. Help is welcome. */
-    min-width: var(--min-width);
+  /* Define minimum width of list and minimum width of columns in list */
+  /* NOTE: Wes B. does not know how to do this using CSS Grid. Help is welcome. */
+  min-width: var(--min-width);
 }
 /* Overwrite browser styles */
 /* FAQ: Combining ID and classname is overspecific, but it is accurate,
@@ -72,6 +72,10 @@ ul#appBrowser-sidebar {
 
   background-color: #f4f4f4;
   border-left: 1px solid rgba(112, 112, 112, 0.25);
+
+  .apps-grid-item {
+    min-width: var(--min-width);
+  }
 }
 
 #appBrowser-sidebar .nav-text,
