--- a/client/src/components/History/JobHistoryModal.module.scss
+++ b/client/src/components/History/JobHistoryModal.module.scss
@@ -1,45 +1,88 @@
 .root {
-  --table-border: 1px solid black;
-
-  border-bottom: var(--table-border);
-  margin: 0;
-  width: 100%;
+  font-size: 0.75rem;
+  color: var(--global-color-primary--x-dark);
+  --border: 1px solid #707070;
 }
 
-.container {
-  display: inline-flex;
-  flex-direction: row;
-}
-
-.panel {
-  border-right: 1px solid rgba(112, 112, 112, 0.25);
-  width: 125px;
-}
-
-.rows {
-  tr:nth-child(odd) {
-    background-color: rgba(#c6c6c6, 0.1);
-  }
-  td {
-    padding: 5px 8px;
-  }
+.link {
+  color: var(--global-color-accent--normal);
 }
 
 .header {
-  border-bottom: var(--table-border);
-}
-
-.side
-/* Columns */
-.status {
-  width: 100px;
-}
-
-/* Messaging */
-.error {
+  background: var(--global-color-primary--x-light);
   display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #9d85ef;
-  padding: 30px;
+}
+
+.header-details {
+  display: flex;
+  font-size: 0.75rem;
+}
+
+.header-job {
+}
+
+.header-details-key {
+  font-weight: 800;
+}
+
+/* Visual separation for details value preceded by details subject */
+.header-details-key + .header-details-value::before {
+  content: ':';
+  display: inline-block;
+  padding-left: 0.1em;
+  padding-right: 0.3em;
+}
+
+/* Visual separation for details value preceded by details subject */
+.header-details-value + .header-details-key::before {
+  content: '|';
+  display: inline-block;
+  padding-left: 0.3em;
+  padding-right: 0.3em;
+}
+
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.left-panel {
+  border-right: var(--table-border);
+  min-width: 200px;
+}
+
+.right-panel {
+  width: 100%;
+  padding: 5px;
+}
+
+.panel-content {
+  padding: 25px;
+}
+
+.section {
+}
+
+.section-entry {
+  padding-left: 15px;
+  display: flex;
+  flex-direction: row;
+}
+
+.entry-label {
+  flex-basis: 30%;
+}
+.entry-value {
+  flex-basis: 70%;
+}
+
+.alternating-background:nth-child(odd) {
+  background: var(--global-color-primary--x-light);
+  border-top: var(--border);
+  border-bottom: var(--border);
+}
+
+.label {
+  font-weight: 800;
 }
