--- a/client/src/components/DataFiles/DataFilesModals/DataFilesCarouselModal/DataFilesCarouselModal.module.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesCarouselModal/DataFilesCarouselModal.module.scss
@@ -2,6 +2,37 @@
   height: 200px;
   background-color: grey;
 }
+.carousel-root {
+  max-width: 725px;
+}
 .item {
+  max-height: 452px;
   width: 100%;
+  border: 1px solid #707070;
+}
+.thumbnail-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+.thumbnail {
+  display: flex;
+  position: relative;
+  border: 1px solid #707070;
+  height: 91px;
+  width: 127px;
+  .image-selector {
+    background: none;
+    border: white;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+}
+.thumbnail-loading {
+  @extend .thumbnail;
+  background-color: #707070;
+}
+.thumbnail-image {
+  max-width: 100%;
 }
