--- a/client/src/styles/trumps/icon.css
+++ b/client/src/styles/trumps/icon.css
@@ -13,9 +13,9 @@
 
 /* FP-455: Try to use selector `.icon, [class*="icon-"]` and update app accordingly */
 .icon {
-  width: 1em;
-  height: 1em;
-  font-size: 1.2em; /* 16px design * 1.2 design-to-app ratio (rounded) */
+  width: 1rem;
+  height: 1rem;
+  font-size: 1.2rem; /* 16px design * 1.2 design-to-app ratio (rounded) */
   vertical-align: middle;
   display: inline-flex; /* `flex` to align `::before`; `inline` to not trigger new line */
                         /* a modern slimmer alternative to `&::before { display: block; }` */
