FP-341: UI/UX: Fix Button Sizes […]
Fix button sizes to allow correct search button size to "fit" interface.

--- a/client/src/components/Workbench/Workbench.scss
+++ b/client/src/components/Workbench/Workbench.scss
@@ -42,12 +42,12 @@
   color: #9d85ef;
 }
 
+/* FP-546: These styles are deprecated duplicates of `bootstrap.btn.css` */
 .workbench-content .btn-secondary {
   background-color: #F4F4F4;
   color: #484848;
   border: 1px solid #AFAFAF;
 }
-
 .workbench-content .btn-primary {
   background-color: #9d85ef;
   color: white;
