--- a/client/src/components/Sidebar/Sidebar.module.scss
+++ b/client/src/components/Sidebar/Sidebar.module.scss
@@ -23,6 +23,6 @@ $width: 215px;
 
 .text {
   padding-left: 20px;
-  font-size: 0.75em; /* ~20px (16px design * 1.2 design-to-app ratio) */
+  font-size: 0.75em; /* 12px (16px design * 1.2 design-to-app ratio) */
   font-weight: 500;
 }
