FP-545: Add comment

--- a/client/src/components/_common/Button/Button.module.scss
+++ b/client/src/components/_common/Button/Button.module.scss
@@ -7,7 +7,7 @@
 
   /* Align elements horizontally and vertically */
   display: flex;
-  align-items: center;
+  align-items: center; /* NOTE: `self-end` looks better in FF, but no change in other browsers */
   justify-content: center;
 
   & + & {
