FP-545: Tweaks learned during PR #96

--- a/client/src/components/Workbench/Workbench.scss
+++ b/client/src/components/Workbench/Workbench.scss
@@ -42,8 +42,7 @@
   color: #9d85ef;
 }
 
-/* FP-546: After FP-546 standardizes `_common/Button`,
-           these styles can likely be deleted. */
+/* FP-546: These styles will become deprecated duplicates of `bootstrap.btn.css` */
 .workbench-content .btn-secondary {
   background-color: #F4F4F4;
   color: #484848;
