--- a/client/src/components/_common/Button/Button.module.scss
+++ b/client/src/components/_common/Button/Button.module.scss
@@ -10,12 +10,18 @@
   align-items: center; /* NOTE: `self-end` looks better in FF, but no change in other browsers */
   justify-content: center;
 
+  font-weight: 700;
+
   & + & {
     margin-left: 7px; /* 7px (6px design * 1.2 design-to-app ratio) */
   }
 }
 .icon {
-  margin-right: 12px;  /* 12px (10px design * 1.2 design-to-app ratio) */
+  margin-right: 12px; 
+
+  /* FAQ: The icons for the Data Files action buttons are smaller than others */
+  /* TODO: Ask design if this is intentional… */
+  // font-size: 1.05rem; /* 16.8px (14px design * 1.2 design-to-app ratio) */ /* 12px (10px design * 1.2 design-to-app ratio) */
 }
 .text {
   /* … */
