Fix linting errors

--- a/client/src/components/History/JobHistoryModal.module.scss
+++ b/client/src/components/History/JobHistoryModal.module.scss
@@ -18,9 +18,6 @@
   font-size: 0.75rem;
 }
 
-.header-job {
-}
-
 .header-details-key {
   font-weight: 800;
 }
@@ -62,6 +59,8 @@
 }
 
 .section {
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .section-entry {
