--- a/client/src/styles/components/bootstrap.btn.css
+++ b/client/src/styles/components/bootstrap.btn.css
@@ -1,13 +1,17 @@
 /*
 Btn (Bootstrap)
 
-Override Bootstrap styles.
+Override Bootstrap styles. See:
 
-See [ReactStrap Buttons](https://reactstrap.github.io/components/buttons/).
+- [ReactStrap Buttons](https://reactstrap.github.io/components/buttons/)
+- [Bootstrap Buttons](https://getbootstrap.com/docs/4.4/components/buttons/)
 
 Styleguide Components.Bootstrap.Btn
 */
 .btn {
+  /* FAQ: Vertical padding reduced by 1px each to near input height of design * 1.2 */
+  padding: 6px 12px; /* 6px 10px design * 1.2 design-to-app ratio */
+
   border-radius: 0;
   font-weight: 700;
   /* NOTE: Should set `font-size`, but `.icon`'s `em` adversely changes icon size */
@@ -18,8 +22,6 @@ Styleguide Components.Bootstrap.Btn
 /* FP-546: Before FP-546 standardizes `_common/Button`,
             the color/border are overridden and duplicated by `Workbench.scss` */
 .btn-primary {
-  padding: 7px 12px; /* 6px 10px design * 1.2 design-to-app ratio */
-
   color: var(--global-color-primary--xx-light);
   background-color: var(--global-color-accent--normal);
   border: none;
@@ -27,7 +29,7 @@ Styleguide Components.Bootstrap.Btn
 .btn-secondary {
   color: var(--global-color-primary--x-dark);
   background-color: var(--global-color-primary--x-light);
-  border: var(--global-border-width--normal) solid var(--global-color-primary--normal);
+  border: var(--global-border--normal);
 }
 /* WARNING: These styles are NOT defined by Design (origin: DataFiles) — 2020-07-21 */
 .btn-secondary:not(:disabled):hover {
