--- a/client/src/components/History/History.module.scss
+++ b/client/src/components/History/History.module.scss
@@ -8,8 +8,6 @@
 
     .header-text {
         font-size: 1.25rem;
-        display: flex;
-        align-items: flex-end;
     }
 
     button {
@@ -20,6 +18,7 @@
 }
 .sidebar {
     --vertical-buffer: 15px;
+
     /* FP-404: All Portal section sidebars should use this value. */
     --min-width: 200px;
 
@@ -36,20 +35,15 @@
 
         .link-icon {
             font-size: 1.2em; /* ~20px (16px design * 1.2 design-to-app ratio) */
-            width: 1em;
+            width: 1em;       /* TODO: delete this after Cortal icon replaces font awesome */
         }
         .link-text {
             font-size: 0.75rem; /* 12px (10px design * 1.2 design-to-app ratio) */
             font-weight: 500;
             padding-left: 16px;
-            vertical-align: middle;
-        }
-        &:hover {
-            // background: var(--global-color-accent--light);
         }
     }
     .active {
         background: rgba(#9d85ef, 0.25);
     }
 }
-
