Syle modal column header

--- a/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
@@ -1,5 +1,7 @@
 .dataFilesModalColHeader {
-    font-weight: bold;
+  font-weight: bold;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .dataFilesModal {
