--- a/client/src/components/Jobs/Jobs.module.scss
+++ b/client/src/components/Jobs/Jobs.module.scss
@@ -1,7 +1,7 @@
 /* Overrides */
 
 /* Override Bootstrap `.badge`, because we need to weight/size matching other text */
-.job-history .badge {
+.badge {
   font-size: 100%;
   font-weight: 400;
 }
