--- a/client/src/components/DataFiles/DataFilesModals/DataFilesModalTables/DataFilesModalListingTable.module.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesModalTables/DataFilesModalListingTable.module.scss
@@ -2,8 +2,10 @@
   padding-left: 35px;
 }
 
-.container {
+.normal-indention {
   padding-left: 10px;
+}
+.container {
   display: flex;
   align-items: center;
 }
