FP-515 (with FP-354): Change Icon Size to 18px …
And replace `.app-icon` and `.category-icon` with `.icon`.

--- a/client/src/components/Allocations/Allocations.scss
+++ b/client/src/components/Allocations/Allocations.scss
@@ -74,7 +74,7 @@
         padding-left: 1.5em; /* ~20px design * 1.2 design-to-app ratio (rounded) */
 
         .link-icon {
-            font-size: 1.2em; /* ~20px (16px design * 1.2 design-to-app ratio) */
+            font-size: 1.125rem; /* ~18px (16px design * 1.2 design-to-app ratio) (rounded) */
             width: 1em;
         }
         .link-text {
