--- a/client/src/styles/trumps/icon.css
+++ b/client/src/styles/trumps/icon.css
@@ -15,7 +15,7 @@
 .icon {
   width: 1em;
   height: 1em;
-  font-size: 1.2em; /* 16px design * 1.2 design-to-app ratio (rounded) */
+  font-size: 1.125rem; /* ~18px (16px design * 1.2 design-to-app ratio) (rounded) */
   font-weight: normal; /* Prevent external styles from accidentally bolding the icon */
   vertical-align: middle;
   display: inline-flex; /* `flex` to align `::before`; `inline` to not trigger new line */
