--- a/client/src/styles/components/bootstrap.btn.css
+++ b/client/src/styles/components/bootstrap.btn.css
@@ -9,7 +9,7 @@ Override Bootstrap styles. See:
 Styleguide Components.Bootstrap.Btn
 */
 .btn {
-  /* FAQ: Vertical padding reduced by 1px each to near input height of design * 1.2 */
+  /* FAQ: Vertical padding reduced by 1px each to near button height of design * 1.2 */
   padding: 6px 12px; /* 6px 10px design * 1.2 design-to-app ratio */
 
   border-radius: 0;
