--- a/client/src/styles/components/bootstrap.form.css
+++ b/client/src/styles/components/bootstrap.form.css
@@ -9,6 +9,9 @@ Override Bootstrap styles. See:
 Styleguide Components.Bootstrap.Form
 */
 .form-control {
+  /* FAQ: Vertical padding reduced by 1px each to near input height of design * 1.2 */
+  padding: 6px 12px; /* 6px 10px design * 1.2 design-to-app ratio */
+
   border: var(--global-border--normal);
   border-radius: 0;
 }
