--- a/client/src/components/DataFiles/DataFiles.module.scss
+++ b/client/src/components/DataFiles/DataFiles.module.scss
@@ -29,7 +29,7 @@
   align-items: flex-end;
 }
 
-/* Children: Items */
+/* Children (of `items`) */
 .sidebar {
   /* FP-404: All Portal section sidebars should use this value. */
   --min-width: 200px;
