--- a/client/src/components/DataFiles/DataFilesTable/DataFilesTable.scss
+++ b/client/src/components/DataFiles/DataFilesTable/DataFilesTable.scss
@@ -11,7 +11,7 @@
   font-size: 16px;
   border-bottom: 1px solid #e0e0e0;
 }
-.tr-even {
+.tr-background-shading {
   background: #F4F4F4;
 }
 .tr-header {
@@ -19,8 +19,6 @@
   padding-bottom: 0;
   font-weight: bold;
 }
-
-
 
 .scroll {
   display: flex;
